fix(styles): .naturalList having weird spacing on Safari

--- a/assets/pages/index/page.css
+++ b/assets/pages/index/page.css
@@ -247,7 +247,7 @@ ul {
   }
 
   ul.naturalList li {
-    display: inline-block;
+    display: inline;
   }
 
   ul.naturalList li:not(:last-child):after {
